SDM-2829: Favor JDK immutable collections instead of Guava counterparts.